    them into one.
  * Use dh_installinit to install /etc/default/schooltool.
  * Use dh_installexamples to install example config file.
  * Added logrotation using logrotate script.
  * Moved installation of clients into /usr/share as it is architecture
    independent.
  * Attempt to remove logs and other files on purge (but NOT database).
  * Updated schooltool-client manpage.

 -- Brian Sutherland <jinty@web.de>  Sat, 18 Sep 2004 13:05:48 +0200

schooltool (0.6+svn20040825-0.1) unstable; urgency=low

  * Not released.
  * debian/README.Debian: mention the new web frontend.
  * debian/schooltool.conf: added web 7080 and app-log-path.
  * debian/rules: added schooltool.css to the server package
  * debian/rules: added csvimport.py to the clients package (Gintas)

 -- Marius Gedminas <marius@pov.lt>  Wed, 25 Aug 2004 15:16:16 +0300

schooltool (0.6-0.1) unstable; urgency=low

  * Released SchoolTool Milestone 6.

 -- Albertas Agejevas <alga@pov.lt>  Thu, 22 Jul 2004 21:19:43 +0300

schooltool (0.5+svn20040518-0.1) unstable; urgency=low

  * Do not remove the system user on package removal, see
    http://lists.debian.org/debian-devel/2004/05/msg01156.html

 -- Marius Gedminas <marius@pov.lt>  Wed, 19 May 2004 00:45:34 +0300

schooltool (0.5-0.1) unstable; urgency=low

  * Released SchoolTool Milestone 5

 -- Albertas Agejevas <alga@pov.lt>  Thu,  6 May 2004 20:05:50 +0300

schooltool (0.4+svn20040505-0.1) unstable; urgency=low

  * Packaged subversion snapshot as of 2004-05-05.
  * Split the server and the client parts into separate packages.
  * A number of files had been renamed for a while (e.g.
    /etc/init.d/schooltool was renamed to /etc/init.d/schooltool-server).
    They have now been renamed back.  Hopefully no one used debs built during
    that period, as we have no migration logic in postinst scripts.
  * Added /etc/default/schooltool so that the schooltool server could be
    specified not to load on startup.
