@@ -10,6 +10,7 @@ Architecture: all
 Conflicts: schooltool
 Replaces: schooltool
 Depends: python2.3 (>= 2.3.2), python2.3-xml, python2.3-twisted (>= 1.3.0), libxml2-python2.3 (>= 2.6.3-1), python2.3-imaging, libschooltool-server (= ${Source-Version}) 
+Suggests:python-tcpwrap (>= 0.2)
 Description: common platform for school administration
  ** This package is not a part of Debian.
  .
